--- a/news.txt
+++ b/news.txt
@@ -1,1 +1,1 @@
-記事が出ました！https://1998ky262.github.io/Scratch-intro-com/article/INTRO-FONT.html,2022/11/05
+公式Scratchアカウントができました！,https://scratch.mit.edu/users/ScratchIntroComBot,2022/11/05
